Feature/flipper api (#7)
* Init using flipper api

* api.java and init api handlers

* Updating flip model and FlipApi.java

* Working out FlipApi.java

* Flip api usage and init login

* getting init login page - fixing issues caused by adding api

* Working on login page functionality

* Cleaning up Api.java

* Adding log in action and changing views from logged in, logged out

* Working on login page

* Making sure we save loginResponse. Init paging buy controller

* Finally fixing issue with freezing between pages. Init pagination component

* Getting pagination to work with sell controller

* Pagination for margins and buys

* Working on rendering flips

* Fixing issue with flip total transaction

* Getting login logic to work

* Removing tabmanager controller

* Working on logout functionality - weird margin duplication bug

* Potentially resolving login issue with flips not loading

* Hooking up POST /flips endpoint. Still debugging duplicate margin creation

* Finally fixing duplicate margin issue

* Fixing incorrect buyAt, sellAt for margins

* Working on removing duplicate code

* Condensing buy, sell into transaction logic

* Styling display name, logout button, and adding some padding

* Working on upload flips endpoint

* Working on uploading flips-json on log in

* Deleting flips json file. Delete flip funcionality

* up'ing runelite version

* Some code clean up. Making sure long value is printed for total profit

* Updating readme with v1.2

* Cleaning up readme

* Rendering name when deleting flip